--- a/test.html
+++ b/test.html
@@ -63,7 +63,7 @@
       let _volume   = ( parseFloat( _fader.value ) || 50 ) / 100;
       // media files
       let _mp3file  = '/public/audio/intruder_alert.mp3';
-      let _mp3strm  = 'http://79.120.39.202:8002/darkelectro';
+      let _mp3strm  = 'https://ice1.somafm.com/thetrip-128-mp3';
 
       // play audio from url
       function playAudio( url ) {
